# aerosmart-modbus

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
script/: query.py
src/aerosmart_modbus/: __init__.py  aerosmart.py  allgemein.py  grobstaubfilter.py  lueftungsanlage.py  metadata.py  model.py  ventilator.py
tests/: test_smoke.py  test_yaml_consistency.py
tests/fixtures/aerosmartm/: allgemein.yaml  aussentemperatur.yaml  brandmeldeanlage.yaml  carbondioxide.yaml  evu.yaml  feinstaubfilter.yaml  funktionen.yaml  grobstaubfilter.yaml  kuehlung.yaml  lueftungsanlage.yaml  raumtemperatur.yaml  sommerautomatik.yaml  summenstoerung.yaml  ventilator.yaml  waermepumpe.yaml  warmwasser.yaml
