[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aerosmart-modbus"
version = "0.0.0"
description = "A typed Modbus device model for aerosmart ventilation/heat-pump units"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = ["modbus-connection>=3.4,<4"]

[project.optional-dependencies]
cli = ["modbus-connection[pymodbus]>=3.4,<4"]

[project.urls]
Homepage = "https://github.com/kayloehmann/aerosmart-modbus"

[tool.hatch.build.targets.wheel]
packages = ["src/aerosmart_modbus"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
